--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ asgiref==3.6.0
 Django==4.1.7
 Pillow==9.4.0
 sqlparse==0.4.3
+asgiref==3.6.0
+crispy-bootstrap5==0.7
+Django==4.1.7
+django-crispy-forms==2.0
+Pillow==9.4.0
+sqlparse==0.4.3
